--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (finish_function): Only warn about missing return
+	statement with -Wreturn-type.
+
 2002-02-28  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* class.c (build_clone): Update.
