* c-decl.c (finish_function): Only warn about missing return         statement with -Wreturn-type.         * cp/decl.c (finish_function): Only warn about missing return         statement with -Wreturn-type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50134 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Jason Merrill  <jason@redhat.com>
+
+	* decl.c (finish_function): Only warn about missing return
+	statement with -Wreturn-type.
+
 2002-02-24 Craig Rodrigues  <rodrigc@gcc.gnu.org> 
 
 	PR c++/4093
