--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Jason Merrill  <jason@redhat.com>
+
+	* c-decl.c (finish_function): Only warn about missing return
+	statement with -Wreturn-type.
+
 2002-02-27  Zack Weinberg  <zack@codesourcery.com>
 
 	* mklibgcc.in: Don't use \n in a line subject to
