--- a/gcc-3_1-branch/gcc/config/rs6000/rs6000.md
+++ b/gcc-3_1-branch/gcc/config/rs6000/rs6000.md
@@ -9566,7 +9566,12 @@
   "*
 {
   char buf[30];
+#ifdef TARGET_RELOCATABLE
+  ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\",
+			       !TARGET_MINIMAL_TOC || TARGET_RELOCATABLE);
+#else
   ASM_GENERATE_INTERNAL_LABEL (buf, \"LCTOC\", 1);
+#endif
   if (TARGET_ELF)
     strcat (buf, \"@toc\");
   operands[1] = gen_rtx_SYMBOL_REF (Pmode, ggc_strdup (buf));
