* search.c (lookup_base_r): Don't clear is_non_public just because         we found a friendly scope.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50141 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2002-02-28  Jason Merrill  <jason@redhat.com>
 
+	* search.c (lookup_base_r): Don't clear is_non_public just because
+	we found a friendly scope.
+
 	* decl.c (finish_function): Only warn about missing return
 	statement with -Wreturn-type.
 
