--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+Don Feb 28 16:41:19 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgrtl.c (purge_dead_edges): Fix handling of EH edges.
+
+	* i386.h (CONDITIONAL_REGISTER_USAGE): Do not write to
+	PIC_OFFSET_TABLE_REGNUM when it is INVALID_REGNUM
+
+	* x86-64.h (ASM_OUTPUT_MAX_SKIP_ALIGN): Always define.
+
 2002-02-28  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/aix43.h (THREAD_MODEL_SPEC): Delete.
