* i386.h (HARD_REGNO_RENAME_OK): Define. 	* i386.md (fop_?f_comm): Allow memory operand in both arms 	before reload.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50144 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Don Feb 28 16:46:03 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.h (HARD_REGNO_RENAME_OK): Define.
+	* i386.md (fop_?f_comm): Allow memory operand in both arms
+	before reload.
+
 2002-02-23  Zack Weinberg  <zack@codesourcery.com>
 
 	* cppinit.c (merge_include_chains): Check for brack being
