--- a/gcc-3_0-branch/gcc/config/i386/i386.md
+++ b/gcc-3_0-branch/gcc/config/i386/i386.md
@@ -10095,9 +10095,10 @@
 (define_insn "*fop_sf_comm"
   [(set (match_operand:SF 0 "register_operand" "=f")
 	(match_operator:SF 3 "binary_fp_operator"
-			[(match_operand:SF 1 "register_operand" "%0")
+			[(match_operand:SF 1 "nonimmediate_operand" "%0")
 			 (match_operand:SF 2 "nonimmediate_operand" "fm")]))]
-  "TARGET_80387 && GET_RTX_CLASS (GET_CODE (operands[3])) == 'c'"
+  "TARGET_80387 && GET_RTX_CLASS (GET_CODE (operands[3])) == 'c'
+   && (GET_CODE (operands[1]) != MEM || GET_CODE (operands[2]) != MEM)"
   "* return output_387_binary_op (insn, operands);"
   [(set (attr "type") 
         (if_then_else (match_operand:SF 3 "mult_operator" "") 
@@ -10108,9 +10109,10 @@
 (define_insn "*fop_df_comm"
   [(set (match_operand:DF 0 "register_operand" "=f")
 	(match_operator:DF 3 "binary_fp_operator"
-			[(match_operand:DF 1 "register_operand" "%0")
+			[(match_operand:DF 1 "nonimmediate_operand" "%0")
 			 (match_operand:DF 2 "nonimmediate_operand" "fm")]))]
-  "TARGET_80387 && GET_RTX_CLASS (GET_CODE (operands[3])) == 'c'"
+  "TARGET_80387 && GET_RTX_CLASS (GET_CODE (operands[3])) == 'c'
+   && (GET_CODE (operands[1]) != MEM || GET_CODE (operands[2]) != MEM)"
   "* return output_387_binary_op (insn, operands);"
   [(set (attr "type") 
         (if_then_else (match_operand:DF 3 "mult_operator" "") 
