--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,13 @@
+2002-02-26  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/basic_ios.tcc (basic_ios::init): Set _M_fill to zero.
+	Adjust comment.
+	* include/bits/basic_ios.h (basic_ios::_M_fill): Make mutable.
+	(basic_ios::_M_fill_init): New.
+	(basic_ios::fill()): Delay dealing with _M_fill.
+	Adjust comment. 
+	* testsuite/27_io/ios_init.cc (test02): Adjust testcase.
+
 2002-02-28  Loren Rittle  <ljrittle@acm.org>
 
 	* include/Makefile.am (thread_target_headers): Unconditionally
