* config/sparc/sparc.c (sparc64_initialize_trampoline): Generate sign 	extended constants.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50152 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Andrew MacLeod  <amacleod@redhat.com>
+
+	* config/sparc/sparc.c (sparc64_initialize_trampoline): Generate sign
+	extended constants.
+
 2002-02-28  Kazu Hirata  <kazu@hxi.com>
 
 	* config/h8300/h8300.c: Fix formatting.
