* mklibgcc.in: Don't use GNU make extension.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50156 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* mklibgcc.in: Don't use GNU make extension.
+
 2002-02-28  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-parse.in (STATIC): New terminal.
