* mklibgcc.in: Don't use GNU make extension.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50157 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* mklibgcc.in: Don't use GNU make extension.
+
 2002-02-28  Richard Henderson  <rth@redhat.com>
 
 	* haifa-sched.c (sched_emit_insn): New.
