* ra.c: (try_recolor_web): Restore original colors: spilled, 	allocated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50158 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/new-regalloc-branch/gcc/ChangeLog.RA
+++ b/new-regalloc-branch/gcc/ChangeLog.RA
@@ -1,3 +1,8 @@
+Thu Feb 28 22:14:34 2002  Denis Chertykov  <denisc@overta.ru>
+
+	* ra.c: (try_recolor_web): Restore original colors: spilled,
+	allocated.
+
 Sat Feb  2 18:58:07 2002  Denis Chertykov  <denisc@overta.ru>
 
         * pre-reload.h: New. Communication between reload.c, reload1.c and
