* config/ia64/ia64.c (ia64_adjust_cost): All non-MM consumers have         4 cycle latency from MM producers.         (ia64_internal_sched_reorder): Likewise with pipeline flush.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50159 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-28  Richard Henderson  <rth@redhat.com>
+
+	* config/ia64/ia64.c (ia64_adjust_cost): All non-MM consumers have
+	4 cycle latency from MM producers.
+	(ia64_internal_sched_reorder): Likewise with pipeline flush.
+
 2002-02-28  Jakub Jelinek  <jakub@redhat.com>
 
 	* mklibgcc.in: Don't use GNU make extension.
