Add missed changed function.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50161 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/dfa-branch/gcc/ChangeLog
+++ b/dfa-branch/gcc/ChangeLog
@@ -27,8 +27,8 @@
 	
 2002-02-21  Vladimir Makarov  <vmakarov@redhat.com>
 
-	* genautomata.c (add_excls): Check that cpu units in the sets
-	belong the same automaton.
+	* genautomata.c (add_excls, add_presence_absence): Check that
+        cpu units in the sets belong the same automaton.
 
 	* rtl.def (EXCLUSION_SET, PRESENCE_SET, ABSENCE_SET): Add comment
 	about that cpu units in the sets belong the same automaton.
