* expr.c (build_java_arraystore_check): Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50167 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-01  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* expr.c (build_java_arraystore_check): Fix formatting.
+
 2002-02-28  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* expr.c (java_array_data_offset): Removed function.
