--- a/gcc-3_1-branch/ChangeLog
+++ b/gcc-3_1-branch/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-28  Alexandre Oliva  <aoliva@redhat.com>
+
+	* configure.in (libstdcxx_flags): Don't add libstdc++-v3 flags for
+	libjava.
+	(CXX_FOR_TARGET): Explain why -shared-libgcc here.
+
 2002-02-23  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (MAKEINFO): Don't assume makeinfo will be built just
