2002-02-27  Andrew MacLeod  <amacleod@redhat.com>
        * dwarf2out.c (stack_adjust_offset): Add support for POST_INC,
        POST_DEC, and POST_MODIFY.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50172 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Andrew MacLeod  <amacleod@redhat.com>
+
+	* dwarf2out.c (stack_adjust_offset): Add support for POST_INC,
+	POST_DEC, and POST_MODIFY.
+
 2002-02-28  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* doc/invoke.texi, doc/standards.texi: Link to
