--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-28  Richard Henderson  <rth@redhat.com>
+
+	* config/linker-map.gnu: Export operator new with unsigned long,
+	and with std::nothrow_t.  Likewise operator delete.
+
 2002-02-26  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/basic_ios.tcc (basic_ios::init): Set _M_fill to zero.
