* g++.dg/opt/vtgc1.C: Adjust patterns for ia64.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50178 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_1-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-02-28  Richard Henderson  <rth@redhat.com>
+
+	* g++.dg/opt/vtgc1.C: Adjust patterns for ia64.
+
 2002-02-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.dg/debug/20020224-1.c: New.
