* doc/tm.texi (ASM_WEAKEN_DECL): Document. 	(ASM_WEAKEN_LABEL): Mention ASM_WEAKEN_DECL. 	(SUPPORTS_WEAK): Likewise. 	* output.h (add_weak): Add tree param. 	* varasm.c (add_weak): Likewise.  Save decl. 	(struct weak_syms): Add decl field. 	(mark_weak_decls): New function. 	(init_varasm_once): ggc_add_root mark_weak_decls. 	(assemble_start_function): Use ASM_WEAKEN_DECL. 	(assemble_variable): Likewise. 	(assemble_alias): Likewise. 	(declare_weak): Pass decl to add_weak. 	(weak_finish): Use ASM_WEAKEN_DECL. Try to find decl. 	(remove_from_pending_weak_list): Declare and define for 	ASM_WEAKEN_DECL. 	* c-pragma.c (handle_pragma_weak): Adjust add_weak call. 	* c-pragma.h (HANDLE_PRAGMA_WEAK): Define if ASM_WEAKEN_DECL too. 	* defaults.h (SUPPORTS_WEAK): Likewise. 	* config/rs6000/linux64.h (ASM_DECLARE_FUNCTION_NAME): Don't emit 	.weak for code sym.  Do emit .size for descriptor sym. 	(ASM_DECLARE_FUNCTION_SIZE): Define. 	* config/rs6000/rs6000.h (ASM_WEAKEN_DECL): Define. 	(ASM_OUTPUT_DEF_FROM_DECLS): Don't emit .weak here.  Don't output 	.lglobl unless TARGET_XCOFF.  Formatting fixes. 	* config/rs6000/xcoff.h (ASM_DECLARE_FUNCTION_NAME): Don't emit 	.weak for code sym. 	(HANDLE_PRAGMA_WEAK): Remove. 	(ASM_WEAKEN_LABEL): Remove. 	* config/rs6000/aix.h (HANDLE_SYSV_PRAGMA): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50181 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/tm.texi
+++ b/gcc/doc/tm.texi
@@ -6169,7 +6169,7 @@ itself; before and after that, output the additional assembler syntax
 for making that name global, and a newline.
 
 @findex ASM_WEAKEN_LABEL
-@item ASM_WEAKEN_LABEL
+@item ASM_WEAKEN_LABEL (@var{stream}, @var{name})
 A C statement (sans semicolon) to output to the stdio stream
 @var{stream} some commands that will make the label @var{name} weak;
 that is, available for reference from other files but only used if
@@ -6178,18 +6178,29 @@ no other definition is available.  Use the expression
 itself; before and after that, output the additional assembler syntax
 for making that name weak, and a newline.
 
-If you don't define this macro, GCC will not support weak
-symbols and you should not define the @code{SUPPORTS_WEAK} macro.
+If you don't define this macro or @code{ASM_WEAKEN_DECL}, GCC will not
+support weak symbols and you should not define the @code{SUPPORTS_WEAK}
+macro.
+
+@findex ASM_WEAKEN_DECL
+@item ASM_WEAKEN_DECL (@var{stream}, @var{decl}, @var{name}, @var{value})
+Combines (and replaces) the function of @code{ASM_WEAKEN_LABEL} and
+@code{ASM_OUTPUT_WEAK_ALIAS}, allowing access to the associated function
+or variable decl.  If @var{value} is not @code{NULL}, this C statement
+should output to the stdio stream @var{stream} assembler code which
+defines (equates) the weak symbol @var{name} to have the value
+@var{value}.  If @var{value} is @code{NULL}, it should output commands
+to make @var{name} weak.
 
 @findex SUPPORTS_WEAK
 @item SUPPORTS_WEAK
 A C expression which evaluates to true if the target supports weak symbols.
 
 If you don't define this macro, @file{defaults.h} provides a default
-definition.  If @code{ASM_WEAKEN_LABEL} is defined, the default
-definition is @samp{1}; otherwise, it is @samp{0}.  Define this macro if
-you want to control weak symbol support with a compiler flag such as
-@option{-melf}.
+definition.  If either @code{ASM_WEAKEN_LABEL} or @code{ASM_WEAKEN_DECL}
+is defined, the default definition is @samp{1}; otherwise, it is
+@samp{0}.  Define this macro if you want to control weak symbol support
+with a compiler flag such as @option{-melf}.
 
 @findex MAKE_DECL_ONE_ONLY (@var{decl})
 @item MAKE_DECL_ONE_ONLY
