--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-01  Phil Edwards  <pme@gcc.gnu.org>
+
+	* cp-tree.h:  Require __GNUC__ to be #defined.
+	(build_init):  Add missing prototype.
+
 2002-03-01  Jason Merrill  <jason@redhat.com>
 
 	* except.c: Don't include decl.h or obstack.h.  Do include
