--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-01  Phil Edwards  <pme@gcc.gnu.org>
+
+	* cp-tree.h:  Require __GNUC__ to be #defined.
+	(build_init):  Add missing prototype.
+
 2002-02-28  Jason Merrill  <jason@redhat.com>
 
 	* search.c (lookup_base_r): Don't clear is_non_public just because
