2002-03-01  Phil Edwards  <pme@gcc.gnu.org>
	* cp-tree.h (build_init):  Remove prototype.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50194 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2002-03-01  Phil Edwards  <pme@gcc.gnu.org>
 
+	* cp-tree.h (build_init):  Remove prototype.
+
+2002-03-01  Phil Edwards  <pme@gcc.gnu.org>
+
 	* cp-tree.h:  Require __GNUC__ to be #defined.
 	(build_init):  Add missing prototype.
 
