2002-03-01  Michael Matz  <matz@suse.de>
        * typeck.c (cp_pointer_int_sum): Complete inner type which is
        used later by size_in_bytes().


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50198 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/cp/ChangeLog
+++ b/gcc-3_1-branch/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-01  Michael Matz  <matz@suse.de>
+
+	* typeck.c (cp_pointer_int_sum): Complete inner type which is
+	used later by size_in_bytes().
+
 2002-03-01  Phil Edwards  <pme@gcc.gnu.org>
 
 	* cp-tree.h (build_init):  Remove prototype.
