2002-03-01  Vladimir Makarov  <vmakarov@redhat.com>
	* genautomata.c (output_automata_list_transition_code): Check
	automata_list on NULL.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50199 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/dfa-branch/gcc/ChangeLog
+++ b/dfa-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-01  Vladimir Makarov  <vmakarov@redhat.com>
+
+	* genautomata.c (output_automata_list_transition_code): Check
+	automata_list on NULL.
+
 2002-02-28  Vladimir Makarov  <vmakarov@redhat.com>
 
 	* genautomata.c (output_insn_code_cases,
