2002-02-26  Benjamin Kosnik  <bkoz@redhat.com>
	* include/bits/basic_ios.tcc (basic_ios::init): Set _M_fill to zero.
	Adjust comment.
	* include/bits/basic_ios.h (basic_ios::_M_fill): Make mutable.
	(basic_ios::_M_fill_init): New.
	(basic_ios::fill()): Delay dealing with _M_fill.
	Adjust comment.
	* ios.cc (ios_base::ios_base()): Initialize _M_callbacks, _M_words.
	(ios_base::_M_call_callbacks): Adjust.
	* testsuite/27_io/ios_init.cc (test02): Adjust testcase.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50206 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_1-branch/libstdc++-v3/ChangeLog
@@ -25,6 +25,8 @@
 	(basic_ios::_M_fill_init): New.
 	(basic_ios::fill()): Delay dealing with _M_fill.
 	Adjust comment. 
+	* ios.cc (ios_base::ios_base()): Initialize _M_callbacks, _M_words.
+	(ios_base::_M_call_callbacks): Adjust.
 	* testsuite/27_io/ios_init.cc (test02): Adjust testcase.
 
 2002-02-28  Loren Rittle  <ljrittle@acm.org>
