* doc/cpp.texi: Clarify documentation of relationship between 	#line and #include.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50208 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_0-branch/gcc/ChangeLog
+++ b/gcc-3_0-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-01  Zack Weinberg  <zack@codesourcery.com>
+
+	* doc/cpp.texi: Clarify documentation of relationship between
+	#line and #include.
+
 Don Feb 28 16:46:03 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.h (HARD_REGNO_RENAME_OK): Define.
