* doc/cpp.texi: Clarify documentation of relationship between 	#line and #include.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50209 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-01  Zack Weinberg  <zack@codesourcery.com>
+
+	* doc/cpp.texi: Clarify documentation of relationship between
+	#line and #include.
+
 2002-02-28  Richard Henderson  <rth@redhat.com>
 
 	* expmed.c (store_bit_field): Prevent generation of CONCATs;
