* tree-dfa.c (find_refs_in_stmt): Changed if/else statements in 	a switch.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@50216 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ast-optimizer-branch/gcc/ChangeLog
+++ b/ast-optimizer-branch/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-02-28  Sebastian Pop  <s.pop@laposte.net>
 
+	* tree-dfa.c (find_refs_in_stmt): Changed if/else statements in
+	a switch.
+
+2002-02-28  Sebastian Pop  <s.pop@laposte.net>
+
 	* c-simplify.c (simplify_if_stmt): Deleted.
 	(new_simplified_if): New function.
 	(make_type_writable): New function.
