--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-03-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.h (ASM_WEAKEN_DECL): AIX assembler doesn't
+	like more than one symbol per .weak directive.
+
 2002-03-01  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/ia64.c (ia64_initial_elimination_offset): Do not
