* Makefile.in (CRTSTUFF_CFLAGS): Add -fno-zero-initialized-in-bss. 	* doc/invoke.texi (-fno-zero-initialized-in-bss): Document. 	* flags.h (flag_zero_initialized_in_bss): Declare. 	* toplev.c (flag_zero_initialized_in_bss): New flag. 	(lang_independent_options): Add flag_zero_initialized_in_bss. 	* tree.c (initializer_zerop): New function. 	* tree.h (initializer_zerop): Declare. 	* varasm.c (assemble_variable): If we can emit bss, put zero 	initializers in the bss section.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@50218 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -273,6 +273,7 @@ in the following sections.
 -fno-function-cse  -fno-guess-branch-probability @gol
 -fno-inline  -fno-math-errno  -fno-peephole  -fno-peephole2 @gol
 -funsafe-math-optimizations -fno-trapping-math @gol
+-fno-zero-initialized-in-bss @gol
 -fomit-frame-pointer  -foptimize-register-move @gol
 -foptimize-sibling-calls  -fprefetch-loop-arrays @gol
 -freduce-all-givs -fregmove  -frename-registers @gol
@@ -3407,6 +3408,19 @@ an exact implementation of IEEE or ISO rules/specifications for
 math functions.
 
 The default is @option{-ftrapping-math}.
+
+@item -fno-zero-initialized-in-bss
+@opindex fno-zero-initialized-in-bss
+If the target supports a BSS section, GCC by default puts variables that
+are initialized to zero into BSS@.  This can save space in the resulting
+code.
+
+This option turns off this behavior because some programs explicitly
+rely on variables going to the data section.  E.g., so that the
+resulting executable can find the beginning of that section and/or make
+assumptions based on that.
+
+The default is @option{-fzero-initialized-in-bss}.
 @end table
 
 The following options control specific optimizations.  The @option{-O2}
