--- a/gcc-3_1-branch/gcc/ChangeLog
+++ b/gcc-3_1-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sat Mar  2 06:30:14 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* emit-rtl.c (offset_address): Call update_temp_slot_address.
+
 2002-03-01  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/ia64.c (ia64_initial_elimination_offset): Do not
