--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-02  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/classkey1.C: New test.
+
 2002-03-01  Richard Henderson  <rth@redhat.com>
 
 	* gcc.c-torture/compile/981223-1.x: New.
